fix: exit command should close context correctly